--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "author": "",
   "private": true,
-  "license": "MIT",
+  "license": "BSD 3-Clause",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build api && nest build consumers",
